package org.springframework.cloud.pattern.sub;

/**
 * @author zhy
 * @date 2022/3/4 17:26
 */
public class SubSystemC {
    public void methodC() {
        System.out.println("SubSystemC's methodC executed.");
    }
}
